--- a/public/css/simple-sidebar.css
+++ b/public/css/simple-sidebar.css
@@ -1,25 +1,82 @@
-/*!
- * Start Bootstrap - Simple Sidebar (https://startbootstrap.com/template-overviews/simple-sidebar)
- * Copyright 2013-2017 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-simple-sidebar/blob/master/LICENSE)
- */
-
 body {
   overflow-x: hidden;
+  background-image: url(../img/background/2.jpg);
+  opacity: 0.9;
+
 }
 
-.logo{
+.logo {
   width: 100px;
 }
 
-.listagem{
+.view {
+  width: 120px;
+  height: 120px;
+  border: 1px solid;
+  border-color: #5e5e5e;
+  border-radius: 10px;
+}
+
+.cont {
+  padding: 20px 20px 20px 20px;
+  font-style: inherit;
+  font-weight: bold;
+}
+
+.acoes {
+  padding: 10px 10px 10px 10px;
+}
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 30%;
+}
+
+.modal-edicao {
+  display: none; /* Hidden by default */
+}
+
+/* The Close Button */
+.close {
+  color: #0D0A0A;
+  float: right;
+  margin-left: 90%;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.listagem {
   display: none;
 }
 
-.cadastro{
+.cadastro {
   display: none;
 }
-
 
 #wrapper {
   padding-left: 0;
@@ -58,11 +115,20 @@ body {
   padding: 15px;
 }
 
+.excluir {
+  color: #F0F8FB;
+  background-color: #8b211e;
+}
+
+.editar {
+  color: #F0F8FB;
+  background-color: #0c5460;
+}
+
 #wrapper.toggled #page-content-wrapper {
   position: absolute;
   margin-right: -250px;
 }
-
 
 /* Sidebar Styles */
 
@@ -97,38 +163,43 @@ body {
   text-decoration: none;
 }
 
-.sidebar-nav>.sidebar-brand {
+.sidebar-nav > .sidebar-brand {
   height: 65px;
   font-size: 18px;
   line-height: 60px;
 }
 
-.sidebar-nav>.sidebar-brand div {
+.sidebar-nav > .sidebar-brand div {
   color: #999999;
 }
 
-.sidebar-nav>.sidebar-brand div:hover {
+.sidebar-nav > .sidebar-brand div:hover {
   color: #fff;
   background: none;
 }
 
-@media(min-width:768px) {
+@media (min-width: 768px) {
   #wrapper {
     padding-left: 0;
   }
+
   #wrapper.toggled {
     padding-left: 250px;
   }
+
   #sidebar-wrapper {
     width: 0;
   }
+
   #wrapper.toggled #sidebar-wrapper {
     width: 200px;
   }
+
   #page-content-wrapper {
     padding: 20px;
     position: relative;
   }
+
   #wrapper.toggled #page-content-wrapper {
     position: relative;
     margin-right: 0;
